---------------------------------------------------------------------------------------------------
Version: 0.2.4
  Features:
    - Automated GUI sanity-check & recovery: improved stability against #?%@!y-coded mods.
    - New toggleable shortcut (bottom-right button) to open/close Dana. (https://raw.githubusercontent.com/vsaulue/factorio-dana/assets/v0_2/dana-shortcut.png)
  Changes:
    - Query frames can be dragged.
    - Removed the selection tool shortcut (bottom-right button).
    - Top-left button now uses the standard mod-gui format with icon.

---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2020-08-21
  Changes:
    - If a script teleports the player to another surface, Dana will close its GUI.
  Bugfixes:
    - Migration scripts are able to recover from GUI corruptions caused by other scripts (https://mods.factorio.com/mod/dana/discussion/5f36f18423fa1c25793a291f).
    - Fix crash caused by scripts teleporting players to other surfaces. (https://mods.factorio.com/mod/dana/discussion/5f3d95624ab56be26b4476a8).

---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020-08-16
  Bugfixes:
    - Fix crash at start-up caused by fluid-powered boilers. (https://mods.factorio.com/mod/dana/discussion/5f38a575532359df0888b9fa)

---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2020-08-15
  Features:
    - Support of prototype changes caused by mod update/install/uninstall.
  Bugfixes:
    - Fix crash caused while accessing missing prototypes. (https://mods.factorio.com/mod/dana/discussion/5f36f18423fa1c25793a291f)

---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2020-08-10
  Features: